--- a/sample-page/feed/index.html
+++ b/sample-page/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Main Page	</title>
-	<atom:link href="https://powley.com/sample-page/feed/" rel="self" type="application/rss+xml" />
-	<link>http://powley.com/</link>
+	<atom:link href="https://theukrainian1991.github.io/powleypharma/sample-page/feed/" rel="self" type="application/rss+xml" />
+	<link>http://theukrainian1991.github.io/powleypharma/</link>
 	<description>Education that does not break the bank</description>
 	<lastBuildDate>Mon, 31 Jan 2022 17:01:21 +0000</lastBuildDate>
 	<sy:updatePeriod>
