--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -7,9 +7,9 @@
 	>
 <channel>
 	<title>
-	Comments for powleypharma	</title>
-	<atom:link href="https://powley.com/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://powley.com/</link>
+	Comments for Powley Pharma	</title>
+	<atom:link href="https://theukrainian1991.github.io/powleypharma/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://theukrainian1991.github.io/powleypharma/</link>
 	<description>Education that does not break the bank</description>
 	<lastBuildDate>Mon, 31 Jan 2022 14:33:47 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		Comment on Hello world! by A WordPress Commenter		</title>
-		<link>https://powley.com/2022/01/31/hello-world/#comment-1</link>
+		<link>https://theukrainian1991.github.io/powleypharma/2022/01/31/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Mon, 31 Jan 2022 14:27:27 +0000</pubDate>
-		<guid isPermaLink="false">https://powley.com/?p=1#comment-1</guid>
+		<guid isPermaLink="false">https://theukrainian1991.github.io/powleypharma/?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
