--- a/quiz/index.html
+++ b/quiz/index.html
@@ -106,6 +106,7 @@ var CZRParams = {"assetsPath":"https:\/\/theukrainian1991.github.io\/powleypharm
           <div class="nav__menu-wrapper primary-nav__menu-wrapper justify-content-end czr-open-on-hover">
 <ul id="main-menu" class="primary-nav__menu regular-nav nav__menu nav"><li id="menu-item-17" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-17"><a href="https://theukrainian1991.github.io/powleypharma" class="nav__link"><span class="nav__title">Home</span></a></li>
 <li id="menu-item-77" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-77"><a href="https://theukrainian1991.github.io/powleypharma/our-app/" class="nav__link"><span class="nav__title">Our App</span></a></li>
+<li id="menu-item-82" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-78 current_page_item current-active menu-item-82"><a href="https://theukrainian1991.github.io/powleypharma/quiz/" aria-current="page" class="nav__link"><span class="nav__title">Quiz</span></a></li>
 </ul></div>        </nav>
       </div>
 </div>
@@ -136,9 +137,9 @@ var CZRParams = {"assetsPath":"https:\/\/theukrainian1991.github.io\/powleypharm
       <div class="czr-search-expand-inner"><div class="search-form__container ">
   <form action="https://theukrainian1991.github.io/powleypharma/" method="get" class="czr-form search-form">
     <div class="form-group czr-focus">
-            <label for="s-61f822a613e4e" id="lsearch-61f822a613e4e">
+            <label for="s-61f8241d6e0ef" id="lsearch-61f8241d6e0ef">
         <span class="screen-reader-text">Search</span>
-        <input id="s-61f822a613e4e" class="form-control czr-search-field" name="s" type="search" value="" aria-describedby="lsearch-61f822a613e4e" placeholder="Search …">
+        <input id="s-61f8241d6e0ef" class="form-control czr-search-field" name="s" type="search" value="" aria-describedby="lsearch-61f8241d6e0ef" placeholder="Search …">
       </label>
       <button type="submit" class="button"><i class="icn-search"></i><span class="screen-reader-text">Search …</span></button>
     </div>
@@ -150,9 +151,9 @@ var CZRParams = {"assetsPath":"https:\/\/theukrainian1991.github.io\/powleypharm
   <div class="search-form__container ">
   <form action="https://theukrainian1991.github.io/powleypharma/" method="get" class="czr-form search-form">
     <div class="form-group czr-focus">
-            <label for="s-61f822a6143d6" id="lsearch-61f822a6143d6">
+            <label for="s-61f8241d6ed0d" id="lsearch-61f8241d6ed0d">
         <span class="screen-reader-text">Search</span>
-        <input id="s-61f822a6143d6" class="form-control czr-search-field" name="s" type="search" value="" aria-describedby="lsearch-61f822a6143d6" placeholder="Search …">
+        <input id="s-61f8241d6ed0d" class="form-control czr-search-field" name="s" type="search" value="" aria-describedby="lsearch-61f8241d6ed0d" placeholder="Search …">
       </label>
       <button type="submit" class="button"><i class="icn-search"></i><span class="screen-reader-text">Search …</span></button>
     </div>
@@ -171,6 +172,7 @@ var CZRParams = {"assetsPath":"https:\/\/theukrainian1991.github.io\/powleypharm
       <div class="nav__menu-wrapper mobile-nav__menu-wrapper czr-open-on-click">
 <ul id="mobile-nav-menu" class="mobile-nav__menu vertical-nav nav__menu flex-column nav"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-17"><a href="https://theukrainian1991.github.io/powleypharma" class="nav__link"><span class="nav__title">Home</span></a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-77"><a href="https://theukrainian1991.github.io/powleypharma/our-app/" class="nav__link"><span class="nav__title">Our App</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-78 current_page_item current-active menu-item-82"><a href="https://theukrainian1991.github.io/powleypharma/quiz/" aria-current="page" class="nav__link"><span class="nav__title">Quiz</span></a></li>
 </ul></div>      </div>
   </nav>
 </div></div></header>
@@ -198,12 +200,12 @@ var CZRParams = {"assetsPath":"https:\/\/theukrainian1991.github.io\/powleypharm
 </header>  <div class="post-entry tc-content-inner">
     <section class="post-content entry-content ">
       <div class="czr-wp-the-content">
-        <div id="interact-61f81b484b0dce001833666ef83dafcfc16eec4cfb512872f0243fb0"></div><script type="text/javascript">
+        <div id="interact-61f81b484b0dce001833666e5a9dd74a9ba8f935ec4f2716b92aa8b9"></div><script type="text/javascript">
 			(function(){				
 
 				window.addEventListener("load", function(){
 					var app_id = "61f81b484b0dce001833666e";
-					var ref = "61f81b484b0dce001833666ef83dafcfc16eec4cfb512872f0243fb0";
+					var ref = "61f81b484b0dce001833666e5a9dd74a9ba8f935ec4f2716b92aa8b9";
 					var w = "800";
 					var h = "800";
 					var host = "quiz.tryinteract.com";
