--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -10,7 +10,7 @@
 	Comments for Powley Pharma	</title>
 	<atom:link href="https://theukrainian1991.github.io/powleypharma/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://theukrainian1991.github.io/powleypharma/</link>
-	<description>Education that does not break the bank</description>
+	<description>Created by the students, for the students</description>
 	<lastBuildDate>Mon, 31 Jan 2022 14:33:47 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
