--- a/sample-page/feed/index.html
+++ b/sample-page/feed/index.html
@@ -10,8 +10,8 @@
 	Comments on: Main Page	</title>
 	<atom:link href="https://theukrainian1991.github.io/powleypharma/sample-page/feed/" rel="self" type="application/rss+xml" />
 	<link>http://theukrainian1991.github.io/powleypharma/</link>
-	<description>Education that does not break the bank</description>
-	<lastBuildDate>Mon, 31 Jan 2022 17:01:21 +0000</lastBuildDate>
+	<description>Created by the students, for the students</description>
+	<lastBuildDate>Tue, 01 Feb 2022 16:29:24 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
