--- a/sample-page/feed/index.html
+++ b/sample-page/feed/index.html
@@ -8,10 +8,10 @@
 <channel>
 	<title>
 	Comments on: Main Page	</title>
-	<atom:link href="https://theukrainian1991.github.io/powleypharma/sample-page/feed/" rel="self" type="application/rss+xml" />
-	<link>http://theukrainian1991.github.io/powleypharma/</link>
+	<atom:link href="https://powleypharma.com/sample-page/feed/" rel="self" type="application/rss+xml" />
+	<link>http://powleypharma.com/</link>
 	<description>Created by the students, for the students</description>
-	<lastBuildDate>Tue, 01 Feb 2022 17:39:41 +0000</lastBuildDate>
+	<lastBuildDate>Wed, 02 Feb 2022 19:42:53 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
